--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -152,6 +152,17 @@
                     <i class="bi bi-upload"></i>
                     Share content
                 </a>
+
+                @if (_Session.IsAllowedViewModerate())
+                {
+                    <hr class="my-2" />
+                    <a class="py-2 px-1 text-decoration-none text-dark" onclick="offCanvas.hide()" href="/admin">
+                        <i class="bi bi-sliders2-vertical"></i>
+                        Moderate
+                    </a>
+                }
+
+
             }
             @*<hr class="my-2" />
             <a class="py-2 px-1 text-decoration-none text-dark" onclick="offCanvas.hide()" href="/">
