--- a/Client/SharedComponent/Document/EditDelete.razor
+++ b/Client/SharedComponent/Document/EditDelete.razor
@@ -1,7 +1,7 @@
 ﻿@using DocsWASM.Shared.Helpers;
 @using DocsWASM.Shared;
 @using static DocsWASM.Shared.DocumentModels;
-@using static DocsWASM.Shared.Helpers.Bson;
+@using DocsWASM.Shared.Serializer;
 
 <Modal @ref="modal" ModalTitle="Edit document">
 	<div class="modal-body">
@@ -46,10 +46,10 @@
 	public HttpClient httpClient { get; set; }
 
 	[Parameter]
-	public Action deleteEvent { get; set; }
+	public Func<Task> deleteEvent { get; set; }
 
 	[Parameter]
-	public Action editEvent { get; set; }
+	public Func<Task> editEvent { get; set; }
 
 
 	public Modal? modal { get; set; }
@@ -59,12 +59,12 @@
 
 	private async Task EditDocument()
 	{
-		var content = new ByteArrayContent(ToBson(document));
-		var result = await httpClient.PostAsync("documentedit/Edit/" + document.DocumentId, content);
+		var content = new ByteArrayContent(DocumentHeaderSerializer.Serialize(document));
+		var result = await httpClient.PostAsync("documentedit/edit/" + document.DocumentId, content);
 		if (result.IsSuccessStatusCode)
 		{
 			modal.ModalClose();
-			editEvent.Invoke();
+			await editEvent.Invoke();
 		}
 	}
 
@@ -74,7 +74,7 @@
 		if (result.IsSuccessStatusCode)
 		{
 			modal.ModalClose();
-			deleteEvent.Invoke();
+			await deleteEvent.Invoke();
 		}
 	}
 }
